<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/warning_containers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/warning_title"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:paddingStart="15dp"
                    android:paddingEnd="0dp"
                    android:text="@string/warning"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/warning_close_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/button_square_round"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="8dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_cross"
                    android:contentDescription="@string/todo" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/can_t_find_a_route"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="start"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/cant_find_a_route_answer"
                android:textSize="16sp"
                android:gravity="start"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/app_is_showing_wrong_route"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="start"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="15dp"
                android:text="@string/app_is_showing_wrong_route_message"
                android:textSize="16sp"
                android:gravity="start"/>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</FrameLayout>

