<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="5dp"
            app:cardElevation="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">


                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_apps"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/apps_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="0dp"
                    android:text="@string/about_app"
                    android:textSize="14sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="7.5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="7.5dp"
            android:clipChildren="true"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="0dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_rating" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/rate_the_app"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/version_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/please_give_a_rating_if_you_like_this_application"
                        android:textSize="14sp" />


                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/rating_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/item_button" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="7.5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="7.5dp"
            android:clipChildren="true"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="0dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_share" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/share_app"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/share_this_app_with_your_friends"
                        android:textSize="14sp" />


                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/share_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/item_button" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="7.5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="7.5dp"
            android:clipChildren="true"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="0dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_other_app" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/other_app"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/try_some_more_interesting_apps"
                        android:textSize="14sp" />


                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/other_app_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/item_button" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="7.5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="7.5dp"
            android:clipChildren="true"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="0dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_feedback" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/feedback"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/any_suggestion_or_issue_please_mail_us"
                        android:textSize="14sp" />


                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/feedback_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/item_button" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="7.5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="7.5dp"
            android:clipChildren="true"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="0dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_contact" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/contact"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/contact_with_the_app_developer"
                        android:textSize="14sp" />


                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/contact_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/item_button" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="7.5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="7.5dp"
            android:clipChildren="true"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="35dp"
                    android:layout_height="39dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="0dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_development" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/about_development"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/information_of_the_development"
                        android:textSize="14sp" />


                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/app_dev_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/item_button" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="7.5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="7.5dp"
            android:clipChildren="true"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="35dp"
                    android:layout_height="39dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="0dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_version" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/version"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/app_version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/app_version"
                        android:textSize="14sp" />


                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/item_button" />


        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>