<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/rating_dialogue_containers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?colorSecondary"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rating_dialogue_title"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:paddingStart="15dp"
                    android:paddingEnd="0dp"
                    android:text="@string/rate_the_app"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"/>

                <ImageView
                    android:id="@+id/rating_close_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/button_square_round"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="8dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_cross"
                    android:contentDescription="@string/todo" />
            </LinearLayout>



            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />



            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <RatingBar
                    android:id="@+id/rating_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:numStars="5"
                    android:progressTint="@color/colorAccent"
                    android:rating="0" />

                <TextView
                    android:id="@+id/rating_warning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/rating_message"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:layout_gravity="center"/>


            </FrameLayout>




        </LinearLayout>


    </androidx.cardview.widget.CardView>

</FrameLayout>

